--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -17,6 +17,8 @@
         <input type="submit" class="btn btn-outline w-[800px] gap-3" value="로그인">
     </form>
     <a href="/oauth2/authorization/google" class="btn btn-outline">Google 로그인</a>
+    <a href="/oauth2/authorization/naver" class="btn btn-outline">Naver 로그인</a>
+    <a href="/oauth2/authorization/kakao" class="btn btn-outline">Kakao 로그인</a>
     <a href="/signup" class="btn btn-outline">회원가입</a>
 </div>
 </html>
